--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,5 +1,5 @@
 {{define "title"}}A templated page{{end}}
-{{define "body"}}
+{{define "index"}}
 <div class="container-fluid bg-body-tertiary dark__bg-gray-1200">
         <div class="bg-holder bg-auth-card-overlay" style="background-image:url(/static/assets/img/bg/37.png);">
         </div>
@@ -18,7 +18,6 @@
                         </a>
                         <h4 class="text-body-highlight">Enter wifi code</h4>
                         <p class="text-body-tertiary mb-0">Buy code from our partners near you!</p>
-                        <p class="text-body-tertiary text-danger">Invalid access code!<p>
                         <form class="verification-form" data-2fa-form="data-2fa-form" method="POST">
                           <div class="d-flex align-items-center gap-2 mb-3">
                             <input class="form-control px-2 text-center" type="text" name="one"/>
