--- a/templates/errindex.tmpl
+++ b/templates/errindex.tmpl
@@ -1,5 +1,5 @@
-{{define "title"}}Arknet access portal{{end}}
-{{define "body"}}
+{{define "title"}}A templated page{{end}}
+{{define "errindex"}}
 <div class="container-fluid bg-body-tertiary dark__bg-gray-1200">
         <div class="bg-holder bg-auth-card-overlay" style="background-image:url(/static/assets/img/bg/37.png);">
         </div>
@@ -10,31 +10,15 @@
             <div class="card border border-translucent auth-card">
               <div class="card-body pe-md-0">
                 <div class="row align-items-center gx-0 gy-7">
-                  <div class="col-auto bg-body-highlight dark__bg-gray-1100 rounded-3 position-relative overflow-hidden auth-title-box">
-                    <div class="bg-holder" style="background-image:url(/static/assets/img/bg/38.png);">
-                    </div>
-                    <!--/.bg-holder-->
-
-                    <div class="position-relative px-4 px-lg-7 pt-7 pb-7 pb-sm-5 text-center text-md-start pb-lg-7">
-                      <h3 class="mb-3 text-body-emphasis fs-7">Phoenix Authentication</h3>
-                      <p class="text-body-tertiary">Give yourself some hassle-free development process with the uniqueness of Phoenix!</p>
-                      <ul class="list-unstyled mb-0 w-max-content w-md-auto">
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">Fast</span></li>
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">Simple</span></li>
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">Responsive</span></li>
-                      </ul>
-                    </div>
-                    <div class="position-relative z-n1 mb-6 d-none d-md-block text-center mt-md-15"><img class="auth-title-box-img d-dark-none" src="/static/assets/img/spot-illustrations/auth.png" alt="" /><img class="auth-title-box-img d-light-none" src="/static/assets/img/spot-illustrations/auth-dark.png" alt="" /></div>
-                  </div>
-                  <div class="col mx-auto">
+                 <div class="col mx-auto">
                     <div class="auth-form-box">
-                      <div class="text-center"><a class="d-flex flex-center text-decoration-none mb-4" href="/index.html">
+                      <div class="text-center"><a class="d-flex flex-center text-decoration-none mb-4" href="/static/index.html">
                           <div class="d-flex align-items-center fw-bolder fs-3 d-inline-block"><img src="/static/assets/img/icons/logo.png" alt="phoenix" width="58" />
                           </div>
                         </a>
-                        <h4 class="text-body-highlight">Enter the verification code</h4>
-                        <p class="text-body-tertiary mb-0">An email containing a 6-digit verification code has been sent to the email address - exa*********.com </p>
-                        <P class="fs-10 mb-5">Don’t have access? <a href="#!">Use another method</a></P>
+                        <h4 class="text-body-highlight">Enter wifi code</h4>
+                        <p class="text-body-tertiary mb-0">Buy code from our partners near you!</p>
+                        <p class="text-danger">Invalid access code!<p>
                         <form class="verification-form" data-2fa-form="data-2fa-form" method="POST">
                           <div class="d-flex align-items-center gap-2 mb-3">
                             <input class="form-control px-2 text-center" type="text" name="one"/>
@@ -50,6 +34,25 @@
                         </form>
                       </div>
                     </div>
+                  </div>
+                  <div class="col-auto bg-body-highlight dark__bg-gray-1100 rounded-3 position-relative overflow-hidden auth-title-box">
+                    <div class="bg-holder" style="background-image:url(/static/assets/img/bg/38.png);">
+                    </div>
+                    <!--/.bg-holder-->
+
+                    <div class="position-relative px-4 px-lg-7 pt-7 pb-7 pb-sm-5 text-center text-md-start pb-lg-7">
+                      <h3 class="mb-3 text-body-emphasis fs-7">Arknet Wifi</h3>
+                      <p class="text-body-tertiary">Affordable and reliable internet!</p>
+                      <ul class="list-unstyled mb-0 w-max-content w-md-auto">
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">5 pesos 12 hours</span></li>
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">20 pesos 1 day</span></li>
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">50 pesos 7 days</span></li>
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">200 pesos 30 days</span></li>
+                      </ul>
+		      <br/>
+                      <p class="text-body-tertiary">Need extra income? Become a code reseller now!</p>
+                    </div>
+                    <div class="position-relative z-n1 mb-6 d-none d-md-block text-center mt-md-15"><img class="auth-title-box-img d-dark-none" src="/static/assets/img/spot-illustrations/auth.png" alt="" /><img class="auth-title-box-img d-light-none" src="/static/assets/img/spot-illustrations/auth-dark.png" alt=""></div>
                   </div>
                 </div>
               </div>
@@ -70,4 +73,4 @@
           navbarVertical.setAttribute('data-navbar-appearance', 'darker');
         }
       </script>
-      {{end}}
+{{end}}
