--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -40,16 +40,16 @@
                     <!--/.bg-holder-->
 
                     <div class="position-relative px-4 px-lg-7 pt-7 pb-7 pb-sm-5 text-center text-md-start pb-lg-7">
-                      <h3 class="mb-3 text-body-emphasis fs-7">Arknet Wifi</h3>
+                      <h3 class="mb-3 text-body-emphasis fs-7">NetSurfer Wifi</h3>
                       <p class="text-body-tertiary">Affordable and reliable internet!</p>
                       <ul class="list-unstyled mb-0 w-max-content w-md-auto">
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">5 pesos 12 hours</span></li>
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">5 pesos 6 hours</span></li>
                         <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">20 pesos 1 day</span></li>
                         <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">50 pesos 7 days</span></li>
                         <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">200 pesos 30 days</span></li>
                       </ul>
 		      <br/>
-                      <p class="text-body-tertiary">Need extra income? Become a code reseller now!</p>
+                      <p class="text-body-tertiary">Go to your nearest NetSurfer partner stores!</p>
                     </div>
                     <div class="position-relative z-n1 mb-6 d-none d-md-block text-center mt-md-15"><img class="auth-title-box-img d-dark-none" src="/static/assets/img/spot-illustrations/auth.png" alt="" /><img class="auth-title-box-img d-light-none" src="/static/assets/img/spot-illustrations/auth-dark.png" alt=""></div>
                   </div>
