--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -17,7 +17,7 @@
                           </div>
                         </a>
                         <h4 class="text-body-highlight">Enter wifi code</h4>
-                        <p class="text-body-tertiary mb-0">Buy code from our partners near you!</p>
+                        <p class="text-body-tertiary mb-0">Buy code from our partner store or agent near you!</p>
                         <form class="verification-form" data-2fa-form="data-2fa-form" method="POST">
                           <div class="d-flex align-items-center gap-2 mb-3">
                             <input class="form-control px-2 text-center" type="text" name="one"/>
@@ -43,13 +43,10 @@
                       <h3 class="mb-3 text-body-emphasis fs-7">NetSurfer Wifi</h3>
                       <p class="text-body-tertiary">Affordable and reliable internet!</p>
                       <ul class="list-unstyled mb-0 w-max-content w-md-auto">
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">5 pesos 6 hours</span></li>
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">20 pesos 1 day</span></li>
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">50 pesos 7 days</span></li>
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">200 pesos 30 days</span></li>
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">20 pesos 24 hours + 6 hours extension</span></li>
                       </ul>
 		      <br/>
-                      <p class="text-body-tertiary">Go to your nearest NetSurfer partner stores!</p>
+                      <p class="text-body-tertiary">Go to your nearest NetSurfer partner stores or agent!</p>
                     </div>
                     <div class="position-relative z-n1 mb-6 d-none d-md-block text-center mt-md-15"><img class="auth-title-box-img d-dark-none" src="/static/assets/img/spot-illustrations/auth.png" alt="" /><img class="auth-title-box-img d-light-none" src="/static/assets/img/spot-illustrations/auth-dark.png" alt=""></div>
                   </div>
