update portal page

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -16,8 +16,8 @@
                           <div class="d-flex align-items-center fw-bolder fs-3 d-inline-block"><img src="/static/assets/img/icons/logo.png" alt="phoenix" width="58" />
                           </div>
                         </a>
-                        <h4 class="text-body-highlight">Enter wifi code</h4>
-                        <p class="text-body-tertiary mb-0">Buy code from our partner store or agent near you!</p>
+                        <h4 class="text-body-highlight">Arknet Wifi</h4>
+                        <p class="text-body-tertiary mb-0">Enter your wifi code</p>
                         <form class="verification-form" data-2fa-form="data-2fa-form" method="POST">
                           <div class="d-flex align-items-center gap-2 mb-3">
                             <input class="form-control px-2 text-center" type="text" name="one"/>
@@ -40,13 +40,13 @@
                     <!--/.bg-holder-->
 
                     <div class="position-relative px-4 px-lg-7 pt-7 pb-7 pb-sm-5 text-center text-md-start pb-lg-7">
-                      <h3 class="mb-3 text-body-emphasis fs-7">NetSurfer Wifi</h3>
+                      <h3 class="mb-3 text-body-emphasis fs-7">Arknet Wifi</h3>
                       <p class="text-body-tertiary">Affordable and reliable internet!</p>
                       <ul class="list-unstyled mb-0 w-max-content w-md-auto">
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">20 pesos 24 hours + 6 hours extension</span></li>
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">15 pesos for 24 hours!</span></li>
                       </ul>
 		      <br/>
-                      <p class="text-body-tertiary">Go to your nearest NetSurfer partner stores or agent!</p>
+                      <p class="text-body-tertiary">+ 1 hour bonus. A total of 25 hours of unlimited internet! Go to your nearest Arknet partner stores or agent!</p>
                     </div>
                     <div class="position-relative z-n1 mb-6 d-none d-md-block text-center mt-md-15"><img class="auth-title-box-img d-dark-none" src="/static/assets/img/spot-illustrations/auth.png" alt="" /><img class="auth-title-box-img d-light-none" src="/static/assets/img/spot-illustrations/auth-dark.png" alt=""></div>
                   </div>
