--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -43,10 +43,10 @@
                       <h3 class="mb-3 text-body-emphasis fs-7">Arknet Wifi</h3>
                       <p class="text-body-tertiary">Affordable and reliable internet!</p>
                       <ul class="list-unstyled mb-0 w-max-content w-md-auto">
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">15 pesos for 24 hours!</span></li>
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">5 php for 6 hours! and 15 php for 24 hours!</span></li>
                       </ul>
 		      <br/>
-                      <p class="text-body-tertiary">+ 1 hour bonus. A total of 25 hours of unlimited internet! Go to your nearest Arknet partner stores or agent!</p>
+                      <p class="text-body-tertiary">+ 1 hour bonus. Go to your nearest Arknet partner stores or agent!</p>
                     </div>
                     <div class="position-relative z-n1 mb-6 d-none d-md-block text-center mt-md-15"><img class="auth-title-box-img d-dark-none" src="/static/assets/img/spot-illustrations/auth.png" alt="" /><img class="auth-title-box-img d-light-none" src="/static/assets/img/spot-illustrations/auth-dark.png" alt=""></div>
                   </div>
