--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -43,7 +43,10 @@
                       <h3 class="mb-3 text-body-emphasis fs-7">Arknet Wifi</h3>
                       <p class="text-body-tertiary">Affordable and reliable internet!</p>
                       <ul class="list-unstyled mb-0 w-max-content w-md-auto">
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">5 php for 6 hours! and 15 php for 24 hours!</span></li>
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">5 pesos 6 hours!</span></li>
+			<li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">15 pesos 24 hours(1 day)!</span></li>
+			<li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">90 pesos 1 week! save 15 vs per day!</span></li>
+			<li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">300 pesos1 month! save 300 vs per day!</span></li>
                       </ul>
 		      <br/>
                       <p class="text-body-tertiary">+ 1 hour bonus. Go to your nearest Arknet partner stores or agent!</p>
