update error page

--- a/templates/errindex.tmpl
+++ b/templates/errindex.tmpl
@@ -1,5 +1,5 @@
 {{define "title"}}A templated page{{end}}
-{{define "errindex"}}
+{{define "index"}}
 <div class="container-fluid bg-body-tertiary dark__bg-gray-1200">
         <div class="bg-holder bg-auth-card-overlay" style="background-image:url(/static/assets/img/bg/37.png);">
         </div>
@@ -16,9 +16,9 @@
                           <div class="d-flex align-items-center fw-bolder fs-3 d-inline-block"><img src="/static/assets/img/icons/logo.png" alt="phoenix" width="58" />
                           </div>
                         </a>
-                        <h4 class="text-body-highlight">Enter wifi code</h4>
-                        <p class="text-body-tertiary mb-0">Buy code from our partners near you!</p>
+                        <h4 class="text-body-highlight">Arknet Wifi</h4>
                         <p class="text-danger">Invalid access code!<p>
+                        <p class="text-body-tertiary mb-0">Enter your wifi code</p>
                         <form class="verification-form" data-2fa-form="data-2fa-form" method="POST">
                           <div class="d-flex align-items-center gap-2 mb-3">
                             <input class="form-control px-2 text-center" type="text" name="one"/>
@@ -44,13 +44,13 @@
                       <h3 class="mb-3 text-body-emphasis fs-7">Arknet Wifi</h3>
                       <p class="text-body-tertiary">Affordable and reliable internet!</p>
                       <ul class="list-unstyled mb-0 w-max-content w-md-auto">
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">5 pesos 12 hours</span></li>
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">20 pesos 1 day</span></li>
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">50 pesos 7 days</span></li>
-                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">200 pesos 30 days</span></li>
+                        <li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">5 pesos 6 hours!</span></li>
+			<li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">15 pesos 24 hours(1 day)!</span></li>
+			<li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">90 pesos 1 week! save 15 vs per day!</span></li>
+			<li class="d-flex align-items-center"><span class="uil uil-check-circle text-success me-2"></span><span class="text-body-tertiary fw-semibold">300 pesos1 month! save 300 vs per day!</span></li>
                       </ul>
 		      <br/>
-                      <p class="text-body-tertiary">Need extra income? Become a code reseller now!</p>
+                      <p class="text-body-tertiary">+ 1 hour bonus. Go to your nearest Arknet partner stores or agent!</p>
                     </div>
                     <div class="position-relative z-n1 mb-6 d-none d-md-block text-center mt-md-15"><img class="auth-title-box-img d-dark-none" src="/static/assets/img/spot-illustrations/auth.png" alt="" /><img class="auth-title-box-img d-light-none" src="/static/assets/img/spot-illustrations/auth-dark.png" alt=""></div>
                   </div>
