--- a/templates/errindex.tmpl
+++ b/templates/errindex.tmpl
@@ -1,5 +1,5 @@
-{{define "title"}}A templated page{{end}}
-{{define "index"}}
+{{define "title"}}Arknet Piso Wifi{{end}}
+{{define "errindex"}}
 <div class="container-fluid bg-body-tertiary dark__bg-gray-1200">
         <div class="bg-holder bg-auth-card-overlay" style="background-image:url(/static/assets/img/bg/37.png);">
         </div>
