--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,4 +1,4 @@
-{{define "title"}}A templated page{{end}}
+{{define "title"}}Arknet Piso Wifi{{end}}
 {{define "index"}}
 <div class="container-fluid bg-body-tertiary dark__bg-gray-1200">
         <div class="bg-holder bg-auth-card-overlay" style="background-image:url(/static/assets/img/bg/37.png);">
